# kindlenotes2anki

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: audit.yml  ci.yml  release.yml  rust.yml
src/: app_config.rs  connect.rs  csv_writer.rs  main.rs  my_clippings_parser.rs  note.rs
src/resources/: default_config.toml  english_config.toml  test_config.toml
