[package]
name = "kindlenotes2anki"
version = "0.13.9"
authors = ["jdambron"]
description = "A tool to import kindle clippings file to Anki"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
config = { version = "0.15.19", features = ["toml"] }
csv = "1.4.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.26.0"
